<resources>
    <string-array name="list_route">
        <item>
            Select Road
        </item>
    </string-array>
    <string name="app_name">Matt Fare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fare_chart">Fare Chart</string>
    <string name="choose_route">Choose Route</string>
    <string name="cbd">CBD</string>
    <string name="kitengela">Kitengela</string>
    <string name="_40">40</string>
    <string name="autocomplet">AutoComplet</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="saccos">Sacco\'s in</string>
    <string name="rembo">REMBO</string>
    <string name="_50">50 KSH</string>
    <string name="zero">0</string>
    <string name="start_station">Start Station: %1$s</string>
    <string name="end_station">End Station: %1$s</string>
    <string name="route_name">%1$s</string>
    <string name="fare_unknown">Current Fare is Unknown</string>
    <string name="average_fare_now">Average Fare Now: %1$d </string>
    <string name="sacco_name_hint">Sacco Name</string>
    <string name="fare_for_pick_hours">Fare For Pick Hours</string>
    <string name="add_sacco">Add Sacco</string>
    <string name="fare_low_pick_hours">Fare Low Pick Hours</string>
    <string name="road_operating_on">Road Operating On:</string>
    <string name="select_high_pick_hours">Select High Pick Hours</string>
    <string name="checkbox">CheckBox</string>
    <string name="_5_7">5–7 AM</string>
    <string name="_7_9">7–9 AM</string>
    <string name="_9_11">9–11 AM</string>
    <string name="_11_2">11–2 PM</string>
    <string name="_2_4">2–4 PM</string>
    <string name="_4_6">4–6 PM</string>
    <string name="_6_9_pm">6–9 PM</string>
    <string name="_9_11_pm">9–11 PM</string>
    <string name="select_route">Select Route that the Sacco Operates On</string>
    <string name="current_fare">Current Fare is %1$d KSH</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_maps">open maps</string>
    <string name="rational_location">Allow app to access Location to offer best service.</string>
    <string name="where_to">Where to?</string>
    <string name="select_location_marker">select location marker</string>
    <string name="select_location">Select Location</string>
    <string name="title_activity_routes_maps">Map</string>
    <string name="all_routes">All Routes</string>
    <string name="title_activity_plan_trip_maps">Map</string>
    <string name="start_destination_marker">Start Destination Marker</string>
    <string name="plan_trip">Plan Trip</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="start_point">Start Point</string>
    <string name="image_of_nairobi_city">Image of Nairobi City</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="title_activity_search_routes">Map</string>
    <string name="choose_location">Choose Location</string>
    <string name="suggested_routes">Suggested Routes</string>
    <string name="duration_unknow">Duration Unknown</string>
    <string name="duration_minutes">%1$d mins</string>
    <string name="duration_mins_hrs">%1$d Hrs: %2$d mins</string>
    <string name="routes">Routes</string>
    <string name="saccos_operating">Saccos Operating</string>
    <string name="start_point_of_the_bus">Start Point of the bus</string>
    <string name="end_point_of_the_bus">End Point of the Bus</string>
    <string name="saccos_operating_from">Saccos Operating From</string>
    <string name="tusker_ronald_ngala">Tusker/Ronald Ngala</string>
    <string name="thayo">Thayo</string>
    <string name="bus_stops">Bus Stops</string>
    <string name="fare">%1$d KSH</string>
    <string name="error_message_fetching_route">Failed to Fetch Routes. Check Connections</string>

    // mapbox api key
    <string name="mapbox_access_token">pk.eyJ1IjoibWFsdWtpIiwiYSI6ImNrYmdmc2M3ZjA3cWgycnAzaTY2ejlkYWcifQ.vIYWA1Q66uJiTZatyqJ1Gg</string>
    <string name="app_intro">My Custom App Intro</string>

    // array
    <string-array name="depart_options">
        <item>
            Depart Now
        </item>
        <item>
            Set Your Departure time.
        </item>
        <item>
            Set desired arrival time
        </item>
    </string-array>
</resources>
