<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="leg"
            type="codes.malukimuthusi.hackathon.webService.Leg" />

        <variable
            name="clickListener"
            type="codes.malukimuthusi.hackathon.adapters.LegClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{()-> clickListener.onClick(leg)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/startPoint"
                    style="@style/TextAppearance.MyTheme.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{leg.from.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Githurai, Kasarani" />

                <TextView
                    android:id="@+id/time"
                    style="@style/TextAppearance.MyTheme.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/startPoint"
                    app:layout_constraintTop_toBottomOf="@+id/startPoint"
                    app:tripDuration="@{leg.duration}"
                    tools:text="54 min" />

                <TextView
                    android:id="@+id/fare"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:fetchSaccoFare="@{leg.routeId}"
                    app:layout_constraintBottom_toBottomOf="@+id/time"
                    app:layout_constraintEnd_toEndOf="@+id/startPoint"
                    app:layout_constraintHorizontal_bias="0.442"
                    app:layout_constraintStart_toEndOf="@+id/time"
                    app:layout_constraintTop_toTopOf="@+id/time"
                    tools:text="50 KSH" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/start_point_of_the_bus"
                    app:layout_constraintBottom_toBottomOf="@+id/startPoint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/startPoint"
                    app:srcCompat="@drawable/ic_location_on_black_24dp" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/saccos_operating"
                    android:textColor="@android:color/holo_blue_dark"
                    app:layout_constraintStart_toStartOf="@+id/time"
                    app:layout_constraintTop_toBottomOf="@+id/time" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:rotation="-90"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/textView7"
                    app:srcCompat="@drawable/ic_expand_more_black_24dp" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/end_point_of_the_bus"
                    app:layout_constraintBottom_toBottomOf="@+id/destination"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/destination"
                    app:srcCompat="@drawable/ic_flag_triangle" />

                <TextView
                    android:id="@+id/destination"
                    style="@style/TextAppearance.MyTheme.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{leg.to.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:text="Githurai, Kasarani" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>